# EMC-Info-Rust

./: Cargo.toml  README.md
src/: data.rs  lib.rs  nation.rs  resident.rs  town.rs  util.rs
