[package]
name = "EMC-info"
version = "1.0.0"
edition = "2021"

[lib]
name = "emc"

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["json"] }
futures = { version = "0.3.21", optional = true }
lazy_static = "1.4.0"
serde_json = "1.0.79"
regex = "1.5.5"

[dev-dependencies]
tokio = { version = "1.17.0", features = ["macros"] }

[features]
sync = ["reqwest/blocking"]
async = ["futures"]
